SET part 2,introduction,dictionary

--- a/Dissertation/dictionary.tex
+++ b/Dissertation/dictionary.tex
@@ -1,6 +1,38 @@
 \chapter*{Словарь терминов}             % Заголовок
 \addcontentsline{toc}{chapter}{Словарь терминов}  % Добавляем его в оглавление
 
-\textbf{TeX} : Cистема компьютерной вёрстки, разработанная американским профессором информатики Дональдом Кнутом
+\textbf{КЭ} : Качество электрической энергии
 
-\textbf{панграмма} : Короткий текст, использующий все или почти все буквы алфавита
+\textbf{ПКЭ} : Показатели качества электрической энергии
+
+\textbf{СИ} : Средства измерения
+
+\textbf{ЭЭ} : электрическая энергия
+
+\textbf{AWGN} : Аддитивный белый гауссов шум
+
+\textbf{CRB} : Граница Крамера-Рао
+
+\textbf{SNR} : соотношение сигнал-шум
+
+\textbf{АД} : Асинхронный двигатель
+
+\textbf{АЦП} : Аналого-цифровой преобразователь
+
+\textbf{ВГ} : Высшие гармоники
+
+\textbf{ГСА} : Граф-схема алгоритма 
+
+\textbf{ДПФ} : Дискретное преобразование Фурье
+
+\textbf{БПФ} : Быстрое преобразование Фурье
+
+\textbf{КЗ} : Короткое замыкание
+
+\textbf{КПД} : Коэффициент полезного действия
+
+\textbf{СЭС} : Система электроснабжения
+
+\textbf{ЦОС} : Цифровая обработка сигналов
+
+\textbf{ЭП} : Электрические приемники
