--- a/Dissertation/introduction.tex
+++ b/Dissertation/introduction.tex
@@ -2,6 +2,51 @@
 \addcontentsline{toc}{chapter}{Введение}    % Добавляем его в оглавление
 
 \newcommand{\actuality}{}
+\textbf{Актуальность темы исследования.}
+Методы цифровой фильтрации сигналов развивались динамично в последние годы. Появились новые математические методы (дискретное преобразование Фурье, разряженное преобразование Фурье и др.), позволяющие создавать эффективные алгоритмы фильтрации. Фильтрация, в конечном счете, является не конечным этапом обработки сигналов, а предобработкой. Операции могут быть выполнены путем моделирования на персональных компьютерах или с помощью специализированной аппаратуры.
+Алгоритмы фильтрации сигналов условно разделяем на два класса:
+\begin{itemize}
+	\item Алгоритмы фильтрации в пространственной области.
+	\item Алгоритмы фильтрации в частотной области.
+\end{itemize}
+
+Основным направлением в применении цифровой обработки сигналов является спектральный анализ. Каждый сигнал, который изменяется во времени, имеет частотный спектр. Электрические сигналы можно анализировать в частотной области с помощью анализаторов спектра, во временной области с помощью осциллографов. К анализатору спектра предъявляют различные требования измерений по максимальной  частоте входного сигнала. Ряд Фурье, представляет разложение несинусоидальной периодической функции на синусоидальные компоненты и позволяет рассматривать сигналы из временной области в частотной. Термин <<частотная область>> используется не только как <<область значений частот>> в преобразовании Фурье, но и как <<область значений переменных>>.
+
+Энергетическая стратегия политики России определяет цели и задачи развития страны в период до 2030 года, утвержденная распоряжением Правительства Российской Федерации от 13 ноября 2009 г. N 1715-р \cite{энергитическая_стратегия}. 
+% [124 - Распоряжение Правительства РФ от 13.11.2009 №1715-р «Об Энергетической стратегии России на период до 2030 года» [Электронный ресурс] / Режим доступа: http://www.consultant.ru/document/cons_doc_LAW_94054/]
+
+Темпы потребления электроэнергии зависят от географического расположения региона. Главным направлением перспективного развития энергетики в России является, повышение эффективности контроля качества электрической энергии (КЭ). 
+Министерство энергетики Российской Федерации (Минэнерго России) является федеральным органом исполнительной власти по государственной политике и нормативно-правовому регулированию в области энергосбережения. Минэнерго России управляет государственным имуществом в сфере производства, а также использования топливно-энергетических ресурсов. Энергетическая политика России позволяет использовать природные энергетические ресурсы в соответствии с приоритетами развития страны для устойчивого роста экономики. Разработана программа перспективного развития страны – <<Энергетическая стратегия России на период до 2030 года>>, утвержденная распоряжением Правительства Российской Федерации от 13.11.2009 № 1715-р \cite{энергетическая_стратеги2}.
+%[206 - Энергетическая стратегия России на период до 2030 года. [Электронный ресурс] / Режим доступа: https://minenergo.gov.ru/node/1026]
+
+Реализация настоящей стратегии, является повышение эффективности 
+контроля качества электрической энергии (КЭ). Поэтому необходимо уделять большее внимание методам контроля и анализа показателей КЭ. 
+Каждое электрооборудование предназначено для работы при определенных параметрах электрической энергии: номинальной частоте, напряжении, токе и других параметрах. Поэтому для нормальной работы необходимо обеспечить требуемое качество электрической (КЭ).  КЭ определяется совокупностью ее характеристик, при которых электрооборудование нормально функционирует. Несоответствие показателей КЭ или свойства электрической энергии, которые ухудшают КЭ и приводят к преждевременному износу электрооборудования. 
+
+Существенный вклад в решение рассматриваемых проблем внесли отечественные ученые: В.Г.~Аввакумов, В.Д.~Бардушко, Г.Я.~Вагин, В.Э.~Воротницкий, Н.И.~Воропай, В.Н.~Горюнов, А.З.~Гамм, И.В.~Жежеленко, Ю.С.~Железко, В.Г.~Курбатский, В.З.~Манусов, И.С.~Рокотян, М.О.~Доливо-Добровольский, В.Т.~Черемисин, М.Г.~Шалимов, А.К.~Шидловский и другие. 
+
+%% УЧЕНЫЕ:
+%В.Г. Аввакумов (Аввакумов В. Г. Влияние несимметрии и несинусоидальности напряжения на работу силовых конденсаторов [Текст]: (Энергет. параметры конденсаторных установок систем энергоснабжения электр. ж. д.): Автореферат дис. на соискание учен. степени кандидата техн. наук / Омский ин-т инженеров ж.-д. транспорта.)
+%В.Д. Бардушко (Бардушко, Валерий Данилович – доктор технических наук. Анализ и параметрический синтез систем тягового электроснабжения: диссертация ... доктора технических наук: 05.13.01. - Иркутск, 2001. - 264 с.) 
+%Г.Я. Вагин (Вагин Геннадий Яковлевич (род. 10 марта 1938 г.) – доктор технических наук, профессор кафедры электроэнергетики и электроснабжения Нижегородского государственного технического университета. Заслуженный деятель науки РФ. Более 200 научных работ, в том числе 16 монографий и 16 учебных пособий.) 
+%В.Э. Воротницкий (Воротницкий, Валерий Эдуардович – доктор технических наук. Методы и средства совершенствования управления распределительными электрическими сетями и повышения их экономичности: автореферат дис. ... доктора технических наук: 05.14.02 / НИИ электроэнергетики АО ВНИИЭ. - Москва, 1996. - 54 с.)
+%Н.И. Воропай (Воропай, Николай Иванович – (род. 1 ноября 1943 года) – физик, член-корреспондент РАН, заслуженный деятель науки Российской Федерации, лауреат премии имени Г. М. Кржижановского, доктор технических наук)
+%В.Н. Горюнов (Горюнов, Владимир Николаевич – доктор технических наук. Беспазовые электрические машины с многополюсными и униполярными индукторами на высококоэрцетивных магнитах: Теория, мат. моделирование, совершенствование конструкций: диссертация ... доктора технических наук: 05.09.01. - Омск, 1993. - 417 с.) 
+%А.З. Гамм (Гамм, Александр Зельманович (9 октября 1938 года, Волгоград) – физик, лауреат премии имени Г. М. Кржижановского. Методы анализа режимов электроэнергетических систем по данным измерений: диссертация ... доктора технических наук : 05.14.02. - Иркутск, 1981. - 337 с.)
+%И.В. Жежеленко (Игорь Владимирович Жежеленко (род. 1930) – украинский учёный в области электроснабжения промышленных предприятий, доктор технических наук, профессор, заведующий кафедрой «Электроснабжение промышленных предприятий» ПГТУ, ректор Ждановского металлургического института / Приазовского Государственного Технического университета (1981—2003).)
+%Ю.С. Железко (Железко, Юрий Станиславович. Научно-методические основы стратегии снижения потерь и повышения качества электроэнергии в электрических сетях: автореферат дис. ... доктора технических наук: 05.14.02. - Москва, 1996. - 46 c.) 
+%В.Г. Курбатский (Курбацкий, Виктор Григорьевич. Мониторинг качества электроэнергии в электрических сетях России для выбора мероприятий по обеспечению электромагнитной совместимости: автореферат дис. ... доктора технических наук: 05.14.02 / Сиб. отд-ние. Сиб. энергетический ин-т им. Л. А. Мелентьева. - Иркутск, 1997. - 42 с.)
+%В.З. Манусов (Манусов, Вадим Зиновьевич. Нелинейные стохастические модели для анализа и планирования режимов электрических систем: диссертация ... доктора технических наук: 05.14.02. - Новосибирск, 1985. - 408 с.:) 
+%И.С. Рокотян (Сергей Сергеевич Рокотян (1908, Умань – 1977) – советский инженер-энергетик, учёный.)
+%М. О. Доливо-Добровольский (Михаил Осипович Доливо-Добровольский (21 декабря 1861 [2 января 1862], Гатчина – 15 ноября 1919, Гейдельберг) – известный российский электротехник, один из создателей техники трёхфазного переменного тока.)
+%В.Т. Черемисин (Черемисин, Василий Титович. Совершенствование методов расчета режимов приема и потребления электрической энергии в условиях несимметрии и несинусоидальности электротяговой нагрузки переменного тока: диссертация ... доктора технических наук: 05.22.09. - Омск, 1996. - 444 с.)
+%М.Г. Шалимов (Шалимов, Михаил Георгиевич. Сопротивления проводов, линий электропередачи и контактной сети в спектре повышенных частот [Текст]: (Теория и расчет): Автореферат дис. на соискание ученой степени доктора технических наук. (435) / Омский ин-т инженеров ж.-д. транспорта. - Омск: [б. и.], 1970. - 34 с.)
+%А.К. Шидловский (Анатолий Корнеевич Шидловский (укр. Анатолій Корнійович Шидловський), (род. 10 октября 1933, с. Веприк (ныне Бобровицкого района Черниговской области Украина) — украинский и советский учëный в области электротехники и электроэнергетики, профессор, член-корреспондент АН УССР (с 1978), действительный член (академик) Национальной академии наук Украины. Вице-президент НАН Украины (1998—2004). Заслуженный деятель науки и техники Украины (1995). Лауреат Государственной премии УССР (1982))
+
+
+Значительный вклад в решение вопросов по измерению показателей КЭ и определению интергармоник внесли зарубежные ученые: Arrillaga~J, Neville~R. Watson, Jos~Arrillaga, Bruce~C.~Smith, Alan~R.~Wood, S.~Chen, Yonghe~H.~Liu, Nicholas~J. Murray, C.P.~Arnold, B.J.~Harker.
+
+
 \newcommand{\progress}{}
 \newcommand{\aim}{{\textbf\aimTXT}}
 \newcommand{\tasks}{\textbf{\tasksTXT}}
