--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -675,4 +675,19 @@
   urldate = {2020-01-09},
 }
 
+@Online{энергитическая_стратегия,
+  title      = {{Р}аспоряжение {П}равительства {РФ} от 13.11.2009 №1715-р <<{О}б {Э}нергетической стратегии {Р}оссии на период до 2030 года>>},
+  annotation = {Действующий},
+  date       = {2009-11-13},
+  file       = {Распоряжение Правительства РФ от 13_11_2009 N 1715-р  Об Эне.rtf:files/370/Распоряжение Правительства РФ от 13_11_2009 N 1715-р  Об Эне.rtf:application/msword},
+  url        = {http://www.consultant.ru/document/cons_doc_LAW_94054/},
+  urldate    = {2020-01-10},
+}
+
+@Online{энергетическая_стратеги2,
+  title   = {Энергетическая стратегия {Р}оссии на период до 2030 года},
+  url     = {https://minenergo.gov.ru/node/1026},
+  urldate = {2020-01-10},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
