--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -871,6 +871,80 @@ q(\delta) = \frac{[E(\delta + \epsilon)(3 - 2 \epsilon) + E(\delta - \epsilon)(3
 p'(\delta) = \frac{H_{p}(\delta, \epsilon)}{E(\delta)}
 \end{equation}
 
+\begin{equation}
+\label{eq:equation84}
+q'(\delta) = \frac{H_{q}(\delta, \epsilon)}{E(\delta)}
+\end{equation}
+
+Где $H_{p}(\delta, \epsilon)$ и $H_{q}(\delta, \epsilon)$ соответственно:
+
+\begin{equation}
+\label{eq:equation85}
+H_{p}(\delta, \epsilon) = E(\delta + \epsilon)(3 + 2 \epsilon) [L (\delta + \epsilon) - L(\delta)] + E(\delta - \epsilon)(3 - 2\epsilon) [L(\delta - \epsilon) - L(\delta)]
+\end{equation}
+
+\begin{equation}
+\label{eq:equation86}
+H_{q}(\delta, \epsilon) = E(\delta + \epsilon)(3 - 2 \epsilon) [L (\delta + \epsilon) - L(\delta)] + E(\delta - \epsilon)(3 + 2\epsilon)[L(\delta - \epsilon) - L(\delta)]
+\end{equation}
+
+\begin{equation}
+\label{eq:equation87}
+H_{p}(\delta, \epsilon) + H_{p}(- \delta, \epsilon) = 4 \epsilon E (\delta + \epsilon) [L(\delta + \epsilon) - L(\delta)] + 4 \epsilon E (\delta - \epsilon)[L(\delta) - L (\delta - \epsilon)] 
+\end{equation}
+
+\begin{equation}
+\label{eq:equation88}
+H_{q}(\delta, \epsilon) + H_{q}(- \delta, \epsilon) = - 4 \epsilon E (\delta + \epsilon) [L(\delta + \epsilon) - L(\delta)] - 4 \epsilon E (\delta - \epsilon)[L(\delta) - L (\delta - \epsilon)]  
+\end{equation}
+
+Если $L (\delta - \epsilon) - L(\delta) < 0$ и $L(\delta) - L(\delta - \epsilon) < 0$, то:
+
+\begin{equation}
+\label{eq:equation89}
+H_{p}(\delta, \epsilon) + H_{p}(- \delta, \epsilon) < 0  
+\end{equation}
+
+\begin{equation}
+\label{eq:equation90}
+H_{q}(\delta, \epsilon) + H_{q}(- \delta, \epsilon) > 0  
+\end{equation}
+
+\begin{equation}
+\label{eq:equation91}
+H_{p}(\delta, \epsilon) < 0
+\end{equation}
+
+\begin{equation}
+\label{eq:equation92}
+H_{q}(\delta, \epsilon) > 0
+\end{equation}
+
+\begin{equation}
+\label{eq:equation93}
+p'(\delta) = \frac{H_{p}(\delta, \epsilon)}{E(\delta)} < 0
+\end{equation}
+
+\begin{equation}
+\label{eq:equation94}
+q'(\delta) = \frac{H_{q}(\delta, \epsilon)}{E(\delta)} > 0
+\end{equation}
+
+где $p(\delta)$ -- убывающая функция;
+
+$\delta$ -- убывающая функция;
+
+$q(\delta)$ -- возрастающая функция.
+
+\begin{equation}
+\label{eq:equation95}
+I(\delta, \epsilon) = \frac{E(\delta - \epsilon)}{E(\delta + \epsilon)} \cdot \frac{L(\delta - \epsilon) - L(\delta)}{L(\delta) - L(\delta + \epsilon)}
+\end{equation}
+
+\begin{equation}
+\label{eq:equation96}
+K(\epsilon) = \frac{3 + 2\epsilon}{3 - 2\epsilon}
+\end{equation}
 %\chapter{Длинное название главы, в которой мы смотрим на~примеры того, как будут верстаться изображения и~списки}\label{ch:ch2}
 %
 %\section{Одиночное изображение}\label{sec:ch2/sec1}
