--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -1021,6 +1021,24 @@ C = \frac{1 + \frac{2 \delta \epsilon}{(n^2 - \delta^2 - \epsilon^2)}}{1 - \frac
 C_{n} = \frac{1 + D_{1}}{1 - D_{1}} \cdot  \frac{1 + D_{2}}{1 - D_{2}} = \frac{1 + D_{1}D_{2} + D_{1} + D_{2}}{1 + D_{1}D_{2} - D_{1} - D_{2}} = \frac{1 + \frac{(D_{1} + D_{1})}{(1 + D_{1}D_{2})}}{1 - \frac{(D_{1} + D_{1})}{(1 + D_{1}D_{2})}}
 \end{equation} 
 
+\begin{equation}
+\label{eq:equation110}
+D = \delta \epsilon \frac{3n^2 - \epsilon^2 + \delta^2}{(n^2 - \delta^2 - \epsilon ^2)(n^2 + \delta ^2) + 2 \delta ^2 \epsilon^2} < \delta \epsilon \frac{3 n^2 + \frac{1}{4}}{(n^2 - \frac{1}{2})n^2}
+\end{equation} 
+
+Если $n = 2$, то
+\begin{equation}
+\label{eq:equation111}
+D < \epsilon \ frac{6 + \frac{1}{8}}{14} < \frac{2}{3} \epsilon
+\end{equation} 
+
+Соответственно:
+\begin{equation}
+\label{eq:equation112}
+1 < T(\delta, \epsilon) < C_{2} < \frac{1 + \frac{2 \epsilon}{3}}{1 - \frac{2 \epsilon}{3}} = K(\epsilon)
+\end{equation} 
+
+При $\delta <0$ получаем $K(\epsilon) < T(\delta, \epsilon) < 1$ 
  
 %\chapter{Длинное название главы, в которой мы смотрим на~примеры того, как будут верстаться изображения и~списки}\label{ch:ch2}
 %
